// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellTitleActions should extract and render each dropdown actions 1`] = `
<div
  className="main-title-actions-group theme-main-title-actions-group"
>
  <div
    className="cell-title-actions theme-cell-title-actions"
  >
    <Actions
      actions={
        Array [
          Object {
            "displayMode": "dropdown",
            "icon": "talend-folder",
            "id": "related",
            "items": Array [
              Object {
                "data-feature": "list.item.related",
                "label": "document 1",
                "onClick": [Function],
              },
              Object {
                "data-feature": "list.item.related",
                "label": "document 2",
                "onClick": [Function],
              },
            ],
            "label": "related items",
            "pullRight": true,
          },
        ]
      }
      hideLabel={true}
      link={true}
      renderers={
        Object {
          "Action": [Function],
        }
      }
    />
    <ActionDropdown
      bsStyle="default"
      className="cell-title-actions-menu theme-cell-title-actions-menu"
      hideLabel={true}
      id="my-actions"
      items={
        Array [
          Object {
            "data-feature": "list.item.edit",
            "hideLabel": true,
            "icon": "talend-pencil",
            "id": "edit",
            "label": "edit",
            "onClick": [Function],
          },
          Object {
            "data-feature": "list.item.delete",
            "hideLabel": true,
            "icon": "talend-trash",
            "id": "delete",
            "label": "delete",
            "onClick": [Function],
          },
        ]
      }
      label="Open menu"
      link={true}
      noCaret={true}
      tooltipPlacement="top"
    />
  </div>
  <Actions
    actions={Array []}
    className="persistent-actions theme-persistent-actions"
    hideLabel={true}
    link={true}
    renderers={
      Object {
        "Action": [Function],
      }
    }
  />
</div>
`;

exports[`CellTitleActions should not render actions in input mode 1`] = `
<div
  className="main-title-actions-group theme-main-title-actions-group"
>
  
</div>
`;

exports[`CellTitleActions should render a menu containing simple actions 1`] = `
<div
  className="main-title-actions-group theme-main-title-actions-group"
>
  <div
    className="cell-title-actions theme-cell-title-actions"
  >
    <Actions
      actions={Array []}
      hideLabel={true}
      link={true}
      renderers={
        Object {
          "Action": [Function],
        }
      }
    />
    <ActionDropdown
      bsStyle="default"
      className="cell-title-actions-menu theme-cell-title-actions-menu"
      hideLabel={true}
      id="my-actions"
      items={
        Array [
          Object {
            "data-feature": "list.item.edit",
            "hideLabel": true,
            "icon": "talend-pencil",
            "id": "edit",
            "label": "edit",
            "onClick": [Function],
          },
          Object {
            "data-feature": "list.item.delete",
            "hideLabel": true,
            "icon": "talend-trash",
            "id": "delete",
            "label": "delete",
            "onClick": [Function],
          },
        ]
      }
      label="Open menu"
      link={true}
      noCaret={true}
      tooltipPlacement="top"
    />
  </div>
  <Actions
    actions={Array []}
    className="persistent-actions theme-persistent-actions"
    hideLabel={true}
    link={true}
    renderers={
      Object {
        "Action": [Function],
      }
    }
  />
</div>
`;

exports[`CellTitleActions should render all actions when the type is LARGE 1`] = `
<div
  className="main-title-actions-group theme-main-title-actions-group"
>
  <Actions
    actions={
      Array [
        Object {
          "data-feature": "list.item.edit",
          "hideLabel": true,
          "icon": "talend-pencil",
          "id": "edit",
          "label": "edit",
          "onClick": [Function],
        },
        Object {
          "data-feature": "list.item.delete",
          "hideLabel": true,
          "icon": "talend-trash",
          "id": "delete",
          "label": "delete",
          "onClick": [Function],
        },
      ]
    }
    hideLabel={true}
    link={true}
    renderers={
      Object {
        "Action": [Function],
      }
    }
  />
  <Actions
    actions={Array []}
    className="persistent-actions theme-persistent-actions"
    hideLabel={true}
    link={true}
    renderers={
      Object {
        "Action": [Function],
      }
    }
  />
</div>
`;

exports[`CellTitleActions should render persistent actions 1`] = `
<div
  className="main-title-actions-group theme-main-title-actions-group"
>
  <div
    className="cell-title-actions theme-cell-title-actions"
  >
    
  </div>
  <Actions
    actions={
      Array [
        Object {
          "className": "favorite",
          "data-feature": "list.item.favorite",
          "icon": "talend-star",
          "label": "favorite",
          "onClick": [Function],
        },
        Object {
          "className": "certify",
          "data-feature": "list.item.certify",
          "icon": "talend-badge",
          "label": "certify",
          "onClick": [Function],
        },
      ]
    }
    className="persistent-actions theme-persistent-actions"
    hideLabel={true}
    link={true}
    renderers={
      Object {
        "Action": [Function],
      }
    }
  />
</div>
`;
